--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </audio>
     <div class="container">
         <div class="typing-container">
-            <h1 class="typing">Nuestra Historia en Mobile Legends</h1>
+            <h1 class="typing">Nuestra Historia en MLBB</h1>
         </div>
         <video src="febrero.mp4" autoplay loop controls></video>
         <p>Para, Denisse</p>
